management/registry/010-deployment.yaml
---
###################################################
# Deployment docker-registry
###################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: registry
  labels: 
    app: registry
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
        # Liveness Probe
        livenessProbe:
          httpGet:
            path: /v2/_catalog
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
      # Add the volume to the Pod
      volumes:
      - name: registry-data
        persistentVolumeClaim:
          claimName: registry-data
      restartPolicy: Always
