management/registry/030-network.yaml
---
###################################################
# Service
###################################################
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: registry
spec:
  ports:
    - name: http
      port: 5000
  selector:
    app: registry

---
###################################################
# Ingress
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: docker-registry
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # optional authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    #nginx.ingress.kubernetes.io/auth-secret: registry-basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '

spec:
  tls:
  - hosts:
    - {YOUR-DOMAIN-NAME}
    secretName: docker-registry-tls
  rules:
  - host: {YOUR-DOMAIN-NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
